--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "nuxt start",
     "export": "nuxt export",
     "generate": "nuxt generate",
+    "serve": "nuxt serve",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
