--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "graphql": "^15.1.0",
     "graphql-tag": "^2.10.3",
+    "markdown-it-highlightjs": "^3.2.0",
     "nuxt": "^2.1.13",
     "pg": "^8.2.1"
   },
